fixed background overflow on branches page

--- a/src/main/resources/static/css/Cluster.css
+++ b/src/main/resources/static/css/Cluster.css
@@ -33,7 +33,7 @@
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: #c6d888;
+    background-color: #4fe782;
     margin: 0;
     padding-top: 10px;
 }
